Fixed broken css link, hopefully

--- a/guides/lvling/newblets.html
+++ b/guides/lvling/newblets.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-03 Thu 10:38 -->
+<!-- 2022-03-03 Thu 15:54 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Newblets</title>
@@ -196,7 +196,7 @@ Footer" />
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { width: 90%; }
 </style>
-<link rel="stylesheet" type="text/css" href="//localhost/~yayoi/yayoi/css/yayoi.css"/>
+<link rel="stylesheet" type="text/css" href="//onigirionegai.info/~yayoi/yayoi/css/yayoi.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
