Updated news, updated my character levels, and added a new guide for leveling 135-140

--- a/guides/lvling/adventurer.html
+++ b/guides/lvling/adventurer.html
@@ -3,10 +3,10 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-03 Thu 15:56 -->
+<!-- 2022-03-04 Fri 13:43 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Yaya's World - Guides</title>
+<title>Yaya's World - Guides - Leveling Your Bone-fide Adventurer</title>
 <meta name="author" content="Jon Saxton" />
 <meta name="description" content="My Fiesta and MMO Site
 Header
@@ -220,13 +220,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/sale_findthemall_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/event_WWD_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">Treasure Hunt: Find them all!</h1>
-          <p class="text-center">Awesome items are hiding in the item shop! Find them all!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/sale_find_them_all-870" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">World Wildlife Day!</h1>
+          <p class="text-center">Keep an eye on the Leipoons and win great prizes!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/world_wildlife_day-415" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
@@ -237,7 +237,7 @@ Footer" />
       <div class="col-lg-12 mb-4 mt-2 text-justify">
 
 <body id="outline-container-leveling-your-bone-fide-adeventurer-level-121-cap" class="outline-2">
-<h2 id="leveling-your-bone-fide-adeventurer-level-121-cap">Leveling Your Bone-fide Adeventurer (Level 121-cap)</h2>
+<h2 id="leveling-your-bone-fide-adeventurer-level-121-cap">Leveling Your Bone-fide Adventurer (Level 121-135)</h2>
 <div class="outline-text-2" id="text-leveling-your-bone-fide-adeventurer-level-121-cap">
 <p>
 After following <a href="fledgling.html">my guide</a> thus far
@@ -358,18 +358,6 @@ options to help fill your time.
 and complete any quests you haven&rsquo;t done those far (aside from those
 your dropping for) to help move things a bit faster.
 </p>
-</div>
-</div>
-</div>
-
-<div id="outline-container-congrats" class="outline-3">
-<h3 id="congrats">Congrats 🥳</h3>
-<div class="outline-text-3" id="text-congrats">
-<p>
-You have now capped! What now? Uuuuuummm, I dunno, I haven&rsquo;t reached
-this point yet, but a lot of people seem to like to start over and level
-another character 😆
-</p>
 
   </div>
 </div>
@@ -383,6 +371,7 @@ another character 😆
     </div>
   </div>
 </footer>
+</div>
 </div>
 </div>
 </body>
