--- a/guides/dailes.html
+++ b/guides/dailes.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-03 Thu 15:56 -->
+<!-- 2022-03-04 Fri 13:43 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Daily Quest Quick Guide</title>
@@ -220,13 +220,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/sale_findthemall_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/event_WWD_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">Treasure Hunt: Find them all!</h1>
-          <p class="text-center">Awesome items are hiding in the item shop! Find them all!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/sale_find_them_all-870" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">World Wildlife Day!</h1>
+          <p class="text-center">Keep an eye on the Leipoons and win great prizes!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/world_wildlife_day-415" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
