--- a/guides/lvling/gods.html
+++ b/guides/lvling/gods.html
@@ -6,7 +6,7 @@
 <!-- 2022-03-04 Fri 13:43 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Yaya's World - Guides - Leveling Your Fledgling Adventurer</title>
+<title>Yaya's World - Guides - Leveling Your God-like Adventurers</title>
 <meta name="author" content="Jon Saxton" />
 <meta name="description" content="My Fiesta and MMO Site
 Header
@@ -236,205 +236,54 @@ Footer" />
     <div class="row">
       <div class="col-lg-12 mb-4 mt-2 text-justify">
 
-<body id="outline-container-leveling-your-fledgling-adventurer-level-81-120" class="outline-2">
-<h2 id="leveling-your-fledgling-adventurer-level-81-120">Leveling Your Fledgling Adventurer (level 81-120)</h2>
-<div class="outline-text-2" id="text-leveling-your-fledgling-adventurer-level-81-120">
+<body id="outline-container-leveling-your-god-like-adventurer-level-136-140" class="outline-2">
+<h2 id="leveling-your-god-like-adventurer-level-136-140">Leveling Your God-like Adventurers (level 136-140)</h2>
+<div class="outline-text-2" id="text-leveling-your-god-like-adventurer-level-136-140">
 <p>
-If you have followed my <a href="newblets.html">guides</a> so
-far then you&rsquo;ll be level 81 in no time, especially if you were power
-leveled. Things will start to go really fast or depressingly slow
-depending on the guild you are in, the money you have amassed, or the
-friends you have. This is kinda just how it is in Fiesta, unfortunately.
+When I first wrote my last <a href="adventurer.html">guide</a> the level cap was actually 135 so I said congratulations now figure out what to do next. Well cap is 140 now so I guess it&rsquo;s time for an update to the guide 😉. Sadly progress is slow and you know longer have any KQs to help you out. So, mayhap, you really don&rsquo;t want to try, but in case you think capping might be cool, here&rsquo;s some ideas of what you can do. The same caveat exists with this guide as with the last one. My current highest level character is only 133, so I have <i>not</i> tried any of these suggestions. If you would do try them let me know in the <a href="http://forums.onigirionegai.info/viewforum.php?f=3">forums</a> if they work for you, or let me know if you have other suggestions!
 </p>
 </div>
-
-<div id="outline-container-how-best-to-exploit-repeatable-from-level-81-120-according-to-yayoi" class="outline-3">
-<h3 id="how-best-to-exploit-repeatable-from-level-81-120-according-to-yayoi">How best to exploit repeatable from level 81-120, according to Yayoi</h3>
-<div class="outline-text-3" id="text-how-best-to-exploit-repeatable-from-level-81-120-according-to-yayoi">
+<div id="outline-container-dailies-dailies-dailies-and-more-dailies" class="outline-3">
+<h3 id="dailies-dailies-dailies-and-more-dailies">Dailies, Dailies, Dailies, and more Dailies</h3>
+<div class="outline-text-3" id="text-dailies-dailies-dailies-and-more-dailies">
 <p>
-Again, there are many leveling guides available, and a lot of opinions
-on how things can be done at this stage too. For this stage I&rsquo;m going to
-give you a few options for some of the levels. If you have the friends
-and money they&rsquo;ll help you level really quickly, if you don&rsquo;t than you
-can still solo, or work with a group of close friends your level, and
-stll level, but it&rsquo;ll be slower.
+Your best bet for a while at least is to continue to do the <a href="../dailes.html">dailies</a> you&rsquo;ve been doing up until this point. As I said above, there are no KQs for passed 135 that offer any significant amount of exp, however, many of the hidden dailies and other daily quests you got when you got to 132 are still viable passed 135 and offer some exp. A member of one a guild I am in has broken down the amount of exp, in percentage, that you receive for various levels passed 135. Please note: this is the percentage if you complete all available dailies quests, not the percentage per quest!
 </p>
+<ul class="org-ul">
+<li>135 - 16.70%</li>
+<li>136 - 13.22%</li>
+<li>137 - 11.02%</li>
+<li>138 - 9.07%</li>
+<li>139 - 4.60%</li>
+</ul>
 </div>
-
-<div id="outline-container-level-80-90" class="outline-4">
-<h4 id="level-80-90">Level 80-90</h4>
-<div class="outline-text-4" id="text-level-80-90">
-<ol class="org-ol">
-<li>There is a repeatable for gathering armor pieces in DT. You can have
-a higher level friend or a DT runner and a few droppers run through
-DT with you. Make sure you inventory is nearly empty and just fill it
-with these armor pieces. Once full, leave the dungeon and spam turn
-ins. Rince and repeat until your level 90. Don&rsquo;t forget to get the DT
-Key and quests.</li>
-<li>Alternatively, you can just do all the level 7x quests. There are a
-few somewhat boring reps mixed in there to help you get to 90.</li>
-</ol>
 </div>
-
-<div id="outline-container-the-slow-way" class="outline-5">
-<h5 id="the-slow-way">The slow way</h5>
-<div class="outline-text-5" id="text-the-slow-way">
+<div id="outline-container-new-reps" class="outline-3">
+<h3 id="new-reps">New Reps!</h3>
+<div class="outline-text-3" id="text-new-reps">
 <p>
-Here are the reps you can do to help you get to 90 if you can&rsquo;t do DT
-for some reason:
+There are new reps for you to complete as well. Well a couple anyway.
 </p>
-
-<ol class="org-ol">
-<li>Level 84-88 - Kidmon Rep - &ldquo;Hans in Love&rdquo;</li>
-<li>Level 85-88 - Toy Spade Rep - &ldquo;Kidmon The Menance&rdquo;</li>
-<li>Level 86-89 - Jewel Tree Rep - &ldquo;Tree of Jewels&rdquo;</li>
-<li>Level 88-90 - Red Nix Rep - &ldquo;A Tree With Holes&rdquo;</li>
-</ol>
+<ul class="org-ul">
+<li>Yuna 3 (135-136)</li>
+<li>Soul Rep (136-138)</li>
+<li>Bug Rep (138-139)</li>
+</ul>
 </div>
 </div>
-</div>
-
-<div id="outline-container-level-90-105" class="outline-4">
-<h4 id="level-90-105">Level 90-105</h4>
-<div class="outline-text-4" id="text-level-90-105">
-<ol class="org-ol">
-<li>You can now enter Leviathan Nest. You need to complete the quest
-&ldquo;Lost Key to the Lighthouse&rdquo; to get the key. This requires you to
-slay Nest Slime, which is kinda strong for its level, best to have a
-friend help. Once here you have the key, you can find a guildie,
-friend, or other LN runner and just stand around and gather exp. This
-is nice because you can level while you AFK like in FM, but it can be
-expansive because runners don&rsquo;t run it for free, usually.</li>
-<li>Alternatively, there is a non-LN strategy that is not as easy and is
-a bit slower, but more than doable.</li>
-</ol>
-</div>
-
-<div id="outline-container-the-slow-way-1" class="outline-5">
-<h5 id="the-slow-way-1">The slow way</h5>
-<div class="outline-text-5" id="text-the-slow-way-1">
-<ol class="org-ol">
-<li>Level 90-94 - RS Rep - Complete the following: &ldquo;Burning
-Cave&rdquo;&gt;&ldquo;Burning Cave 2&rdquo; to unlock &ldquo;My hunches never proves wrong&rdquo; -
-Rock Stone is also hard to kill for someone at this level, but I love
-killing RS so just get in-touch with me, or you can have another high
-level guildie or friend kill it for you while you turn in the rep.</li>
-<li>Level 94-95 - Do all the non-repeatable quests you have other than
-the 94s</li>
-<li>Level 96-97 - King Rhino Rep - &ldquo;The Threats of King Rhinoce&rdquo; - Pretty
-easy mini-boss, may even be able to solo him, but a higher level
-killer is faster.</li>
-<li>Level 98 - do all the 9x quests to get you to 99</li>
-<li>Level 99-101 - Slugs rep - &ldquo;Personal Revenge&rdquo;</li>
-<li>Level 101-104 - Mad slugs rep - &ldquo;Suspicious Big Mudmen&rdquo;&gt;&ldquo;Fire on
-Hands and Feet&rdquo;&gt;&ldquo;Unextinguishable Fire&rdquo;</li>
-<li>Level 102-106 - BB rep - &ldquo;Black Bear Beatdown&rdquo;</li>
-</ol>
-</div>
-</div>
-</div>
-
-<div id="outline-container-level-105" class="outline-4">
-<h4 id="level-105">Level 105</h4>
-<div class="outline-text-4" id="text-level-105">
+<div id="outline-container-org4e1e90d" class="outline-3">
+<h3 id="org4e1e90d">Questing</h3>
+<div class="outline-text-3" id="text-org4e1e90d">
 <p>
-If you did LN above, then just do the BB rep mentioned in the slow way
-to get you to 106.
+The <a href="http://fiesta-wiki.com/quests/13">fiesta wiki</a> offers a few options for quests for this level range. It has been recommended to relay on dailies and reps until at least 139. This will allow you to save your quests for when normal quests are suuuper in-effective, and hopefully make that last level just a little faster.
 </p>
 </div>
 </div>
-
-<div id="outline-container-level-106-108" class="outline-4">
-<h4 id="level-106-108">Level 106-108</h4>
-<div class="outline-text-4" id="text-level-106-108">
+<div id="outline-container-org459ea5b" class="outline-3">
+<h3 id="org459ea5b">Suggestions</h3>
+<div class="outline-text-3" id="text-org459ea5b">
 <p>
-Okie, most of the shortcuts are done now so, no matter what, you&rsquo;re
-going to have to grind a bit. Fortunately it isn&rsquo;t really hard. Just
-remember that a lot of people are going to be doing these quests, see if
-you can join a party with a dedicated killer and this will go much
-faster. For these levels, you have the Fire Shellas rep (&ldquo;Playing with
-Fire&rdquo;).
-</p>
-</div>
-</div>
-
-<div id="outline-container-level-109" class="outline-4">
-<h4 id="level-109">Level 109</h4>
-<div class="outline-text-4" id="text-level-109">
-<p>
-Complete all quests you&rsquo;ve saved until this point. If you haven&rsquo;t had to
-do the 9x quests than this will be very quick. Otherwise, the quests in
-OLT are here and they are also fairly quick with any other quests you
-saved up. OLT is best tackled with a party though.
-</p>
-</div>
-</div>
-
-<div id="outline-container-level-110-111" class="outline-4">
-<h4 id="level-110-111">Level 110-111</h4>
-<div class="outline-text-4" id="text-level-110-111">
-<p>
-Nepu Nepu Neeeeep! Its time for the Nep rep. Complete &ldquo;Collecting
-Twister Crystals&rdquo; before getting the repeatable version. Believe it or
-not, there is nothing to collect for this rep, just killing.
-</p>
-</div>
-</div>
-
-<div id="outline-container-level-112-116" class="outline-4">
-<h4 id="level-112-116">Level 112-116</h4>
-<div class="outline-text-4" id="text-level-112-116">
-<p>
-Either Mean Leipoons (&ldquo;Threats for Temporary Settlement 1&rdquo;) or Shellas
-rep (&ldquo;Threats for Temporary Settlement 2&rdquo;). It is important to note that
-you will have to completely The Mean Leipoons rep a few times before the
-Shellas rep shows up. Its weird, but true.
-</p>
-</div>
-</div>
-
-<div id="outline-container-level-116-118" class="outline-4">
-<h4 id="level-116-118">Level 116-118</h4>
-<div class="outline-text-4" id="text-level-116-118">
-<p>
-Wrenches rep. Unfortunately, this quest is buried under a loooong list
-of prequests, but here they are: &ldquo;Milly&rsquo;s Healthy Wonder Medicine
-2&rdquo;&gt;&ldquo;Unknown Causes.. However&rdquo;&gt;&ldquo;Noisy Animals 1&rdquo;&gt;&ldquo;Noisy Animals
-2&rdquo;&gt;&ldquo;Special Wrenches&rdquo;. Once these are complete you&rsquo;ll get the repeatable
-version of &ldquo;Special Wrenches&rdquo;. It should also be noted that you can make
-a ton of money by doing &ldquo;The Workshop Master is making a weapon&rdquo;
-(available at 117) while you are doing the wrenches rep, not to mention
-this boosts your exp too.
-</p>
-</div>
-</div>
-
-<div id="outline-container-level-118-121" class="outline-4">
-<h4 id="level-118-121">Level 118-121</h4>
-<div class="outline-text-4" id="text-level-118-121">
-<p>
-Junks rep. This is also buried under a loooong list of prequests, so
-I&rsquo;ll give you those too. &ldquo;Smart Yeti is preparing for an
-Exam&rdquo;&gt;&ldquo;Something urgent came up to Hilda&rdquo;&gt;&ldquo;Sick Akisha&rdquo;&gt;&ldquo;North Witch&rsquo;s
-dark power&rdquo;&gt;&ldquo;Pagel&rsquo;s voice 1&rdquo;&gt;&ldquo;Pagel&rsquo;s voice 2&rdquo;&gt;&ldquo;Someone can help us..
-Right?&rdquo;&gt;&ldquo;Yeti inivading Arkroute&rdquo;&gt;&ldquo;A strong Alliance&rdquo;&gt;&ldquo;To prosper Bera
-Village&rdquo;&gt;&ldquo;The Adventurers are not arriving&rdquo;&gt;&ldquo;The scariest monster&rdquo;&gt;&ldquo;A
-story of Valiere and Hilda 1&rdquo;&gt;&ldquo;A story of Vailere and Hilda 2&rdquo;&gt;&ldquo;A story
-of Valiere and Hilda 3&rdquo;. After <i>aaall</i> these quests, you&rsquo;ll finally get
-<i>&ldquo;Selling Junks&rdquo;</i>
-</p>
-</div>
-</div>
-</div>
-
-<div id="outline-container-congrats" class="outline-3">
-<h3 id="congrats">Congrats</h3>
-<div class="outline-text-3" id="text-congrats">
-<p>
-You are now a bone-fide adventurer. You are only 15 levels away from
-cap, so keep it up! As always, you can visit the
-<a href="http://fiesta-wiki.com/quests/8">Fiesta Wiki</a> for more information on
-any of the quests above.
+This guide is currently rather incomplete 😅. This is why I have <a href="http://forums.onigirionegai.info/viewforum.php?f=3">forums</a>! Please submit any other suggestions you have or ways you can think to expand this guide. I will also be expanding it has I try these suggestions. As I said, my max level is 133, but I&rsquo;m slowly making progress and I&rsquo;m working with someone who is already above level 135 so it won&rsquo;t be too long. Hopefully this guide still helps in the meantime.
 </p>
 
   </div>
