--- a/adventures/misc.html
+++ b/adventures/misc.html
@@ -3,10 +3,10 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-05 Sat 15:54 -->
+<!-- 2022-03-05 Sat 16:04 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Yaya's World - Guides - Leveling Your Bone-fide Adventurer</title>
+<title>Yaya's World - Adventures - Miscellaneous</title>
 <meta name="author" content="Jon Saxton" />
 <meta name="description" content="My Fiesta and MMO Site
 Header
@@ -236,128 +236,59 @@ Footer" />
     <div class="row">
       <div class="col-lg-12 mb-4 mt-2 text-justify">
 
-<body id="outline-container-leveling-your-bone-fide-adeventurer-level-121-cap" class="outline-2">
-<h2 id="leveling-your-bone-fide-adeventurer-level-121-cap">Leveling Your Bone-fide Adventurer (Level 121-135)</h2>
-<div class="outline-text-2" id="text-leveling-your-bone-fide-adeventurer-level-121-cap">
+<body id="outline-container-org0348fd7" class="outline-2">
+<h2 id="org0348fd7">Miscellaneous Adventures</h2>
+<div class="outline-text-2" id="text-org0348fd7">
 <p>
-After following <a href="fledgling.html">my guide</a> thus far
-you&rsquo;ll notice that trying to do things solo from this point on is really
-hard if not impossible unless you pray really hard to the Gamingo Gods
-and give them plenty of offerings (by purchasing SC) 😅 So, hopefully,
-you&rsquo;ve gotten yourself into a good guild <i>and</i> have managed to collect a
-lot of good friends. Trust me, this really helps 😜 Regardless, there are
-still a few levels left and loooots of repeatable quests to get through
-so onward to ADVENTURE.
-</p>
-</div>
-
-<div id="outline-container-how-best-to-exploit-repeatables-from-121-to-cap-according-to-yayoi" class="outline-3">
-<h3 id="how-best-to-exploit-repeatables-from-121-to-cap-according-to-yayoi">How Best to Exploit repeatables from 121 to cap, according to Yayoi</h3>
-<div class="outline-text-3" id="text-how-best-to-exploit-repeatables-from-121-to-cap-according-to-yayoi">
-<p>
-Okay, okay, all of the reps from here on, well from 116 on really, have
-a looooooooot of prequests, but they are pretty much essential for
-leveling now, so there isn&rsquo;t much you can do about it, sadly. Just
-hunker down, grab some friends, and grind, grind, grind.
-</p>
-</div>
-
-<div id="outline-container-levels-121-123" class="outline-4">
-<h4 id="levels-121-123">Levels 121-123</h4>
-<div class="outline-text-4" id="text-levels-121-123">
-<p>
-Do the Beaks and Shellas repeat (if you can&rsquo;t tell there are too many
-different types of Shellas in this game 😆). To get this repeat complete
-these quests in this order. &ldquo;Embarrassed Basilone&rdquo;&gt;&ldquo;Basilone is avoiding
-to answer&rdquo;&gt;&ldquo;Bailone&rsquo;s Colleagues&rdquo;&gt;&ldquo;Collecting the Colleagues Belongings
-1&rdquo;&gt;&ldquo;Collecting the Colleagues belongings 2&rdquo;&gt;&ldquo;Collecting the Colleagues
-Belongings 3&rdquo;&gt;&ldquo;Present for Jey&rdquo;&gt;&ldquo;Jey&rsquo;s Colleague&rdquo;&gt;&ldquo;Basilone&rsquo;s
-Lie&rdquo;&gt;&ldquo;Suspicious Basilone&rdquo;. That is seriously a lot 😵‍💫, but it will
-unlock &ldquo;Continues Suspicion&rdquo;, a fairly good rep, and give you quite a
-lot of exp to boot, so it isn&rsquo;t all bad.
-</p>
-</div>
-</div>
-
-<div id="outline-container-levels-124-125" class="outline-4">
-<h4 id="levels-124-125">Levels 124-125</h4>
-<div class="outline-text-4" id="text-levels-124-125">
-<p>
-There are actually quite a few reps here, including one that a lot of
-people will probably tell you about where you just go and gather a
-special type of wood. This rep is slow, very slow, without droppers and
-the rest of the reps are also pretty slow, so you can look em up in the
-[[][Fiesta Wiki]] if you&rsquo;d like, but I prefer to just run around and
-quest here. There are lots of quests you have saved to this point and
-they should be more than enough to get you to 125. Also, there is the
-Bajou Sancturary KQ, so that can help.
-</p>
-</div>
-</div>
-
-<div id="outline-container-levels-125-126" class="outline-4">
-<h4 id="levels-125-126">Levels 125-126</h4>
-<div class="outline-text-4" id="text-levels-125-126">
-<p>
-Again, the rep here is slow, so quest and do BS KQ. If you don&rsquo;t quite
-make it to 126, or you&rsquo;re tired of running around complete these
-prequests: &ldquo;Ancient Scriptures (1-5)&gt;&rdquo;Oh Captain, My Captain!
-(1-7)&ldquo;&gt;&rdquo;The Arrival”&gt;&ldquo;Lending A Hand&rdquo;&gt;&ldquo;Nighttime disturbance&rdquo;. After
-that, you&rsquo;ll gain two reps &ldquo;Their Health Is In Danger&rdquo; and &ldquo;Nighttime
-disurbance&rdquo;. In the right spot, both reps can be done together.
-</p>
-</div>
-</div>
-
-<div id="outline-container-levels-127-128" class="outline-4">
-<h4 id="levels-127-128">Levels 127-128</h4>
-<div class="outline-text-4" id="text-levels-127-128">
-<p>
-Mushies rep. This rep takes 6-8 hours with a full party of droppers (be
-nice and save the quest so you can be a dropper for others). To get this
-rep you only need to complete the &ldquo;Mushrooms for Ursula&rdquo; prequest. <b>Note
-(because no one told me this)</b>: You will need one basket from the item
-merchant in Isle of Eya for the prequest and then a <i>second</i> one for the
-rep. Just make sure to keep the basket in your inventory until your
-done.
-</p>
-</div>
-</div>
-
-<div id="outline-container-levels-128-130" class="outline-4">
-<h4 id="levels-128-130">Levels 128-130</h4>
-<div class="outline-text-4" id="text-levels-128-130">
-<p>
-The second wood rep. This is much faster than mushies, but is still
-better with a full pty of droppers. Just look for &ldquo;Serben and His
-Woods&rdquo;. The first will be a non-repeatable, turn it back into to Serben
-to get the repeatable version.
-</p>
-</div>
-</div>
-
-<div id="outline-container-levels-130-135" class="outline-4">
-<h4 id="levels-130-135">Levels 130-135</h4>
-<div class="outline-text-4" id="text-levels-130-135">
-<p>
-From this point until cap, you will want to make sure you complete your
-<a href="../dailes.html">daily quests</a> and compete in available KQs.
-Daily quests reset every day at 00:00 game time. You have some rep
-options to help fill your time.
+Welcome to my general &ldquo;wall o&rsquo; ADVENTURE&rdquo;! This is where I will post <i>some</i> of my special screenshots from my various trips, quest, and other ADVENTUREs around Isya, the world of <a href="http://fiesta.gamigo.com/">Fiesta Online</a>.
 </p>
 
-<ol class="org-ol">
-<li>Level 130-131 - &ldquo;Success is everything&rdquo; or &ldquo;Helping Yuna 1&rdquo;</li>
-<li>Level 130-132 - &ldquo;Front Lines&rdquo;</li>
-<li>Level 132-134 - &ldquo;The Predator Leader&rdquo; or &ldquo;Helping Yuna 2&rdquo;</li>
-<li>Level 134-135 - &ldquo;The Final Ingredient&rdquo; or &ldquo;Helping Yuna 3&rdquo;</li>
-</ol>
-
-<p>
-<i>Final Note</i>: The 135 reps are very slow. Focus on your dailies and KQS
-and complete any quests you haven&rsquo;t done those far (aside from those
-your dropping for) to help move things a bit faster.
-</p>
+<div id="ImgViewer" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content modal">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ImgTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body text-center">
+        <img id="Img" alt="empty" style="max-width: 100%">
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container ">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Helping my Friend's Mage" alt="Cleric helping Mage" style="width: 140px; height: 140px;" src="Cleric+Mage.png" data-holder-rendered="true">
+          <p>My favorite ADVENTUREs are adventures helping friends, like helping this mage 😉</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Playing on the Beach" alt="Beach Day Fun" style="width: 140px; height: 140px;" src="./BeachDayFuns.png" data-holder-rendered="true">
+          <p>I'm playing with my newblet BabyYayo on the beach!</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Matching Swimsuits" alt="Matchy Beach Day" style="width: 140px; height: 140px;" src="./MatchyBeachDay.png" data-holder-rendered="true">
+          <p>We're wearing matching swimsuits.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Tired After Beach Day" alt="Tired After Beach Day" style="width: 140px; height: 140px;" src="./TiredAfterBeachDay.png" data-holder-rendered="true">
+          <p>We got tired from all the playing.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="New Hamster Mount" alt="New Hamster Mount" style="width: 140px; height: 140px;" src="./HamsterFos2.png" data-holder-rendered="true">
+          <p>My Cleric used attendance stamps to get a new mount.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="New King Crab" alt="New King Crab" style="width: 140px; height: 140px;" src="./RidingKingCrab.png" data-holder-rendered="true">
+          <p>Baby won a King Crab mount!</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Baby's King Crab is Baby-sized" alt="King Crabs" style="width: 140px; height: 140px;" src="./KingCrabz.png" data-holder-rendered="true">
+          <p>But, its baby-sized.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="What happened!? Where am I!?" alt="Where am I?" style="width: 140px; height: 140px;" src="./WhereAmI.png" data-holder-rendered="true">
+          <p>What happened!? Where am I!? Is this haven?</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Crazy and Fun Event" alt="OMFG" style="width: 140px; height: 140px;" src="./OMFG.png" data-holder-rendered="true">
+          <p>This was one crazy 😵‍💫, but fun GM event.</p>
+        </div>
+      </div>
+    </div>
 
   </div>
 </div>
@@ -371,8 +302,19 @@ your dropping for) to help move things a bit faster.
     </div>
   </div>
 </footer>
-</div>
-</div>
+
+<script language="javascript" type="text/javascript">
+  $("img.thumb").click(function ( event ){
+    var src=$(this).attr('src');
+    var title=$(this).attr('title');
+
+    $("#ImgTitle").text(title);
+    $("#Img").attr('alt',title)
+    $("#Img").attr('src',src);
+
+    $("#ImgViewer").modal('show');
+     }).css('cursor','pointer');
+</script>
 </div>
 </body>
 </div>
