--- a/adventures/index.html
+++ b/adventures/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-05 Sat 15:54 -->
+<!-- 2022-03-05 Sat 21:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Adventures</title>
@@ -248,7 +248,7 @@ I decided it would be fun to showcase a few of my Adventures both from Fiesta an
 <div class="outline-text-3" id="text-org144641a">
 <ul class="org-ul">
 <li><a href="misc.html">Miscellaneous Adventures and Photo-shoots</a></li>
-<li>Where&rsquo;s Yayoi!?</li>
+<li><a href="where.html">Where&rsquo;s Yayoi!?</a></li>
 </ul>
 
   </div>
