Updated news and Guides
Had some frustration unlocking and understanding a quest so it was time
to fix some lvl 133 dailies. Also, updated the news section. I think I
need something better to put there XD

--- a/adventures/where.html
+++ b/adventures/where.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-06 Sun 10:36 -->
+<!-- 2022-03-16 Wed 18:21 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Adventures - Where's Yayoi!?</title>
@@ -202,7 +202,6 @@ Footer" />
 </head>
 <body>
 <div id="content" class="page">
-
 <nav class="navbar navbar-expand-lg navbar-yayoi bg-yayoi">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
@@ -220,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/event_WWD_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/announcement-general_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">World Wildlife Day!</h1>
-          <p class="text-center">Keep an eye on the Leipoons and win great prizes!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/world_wildlife_day-415" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">St. Patrick's Day must be celebrated!</h1>
+          <p class="text-center">...with a server boost!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/server-boost-754" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
@@ -251,17 +250,17 @@ Footer" />
     </div>
   </div>
 </div>
-<body id="outline-container-orgb9f2284" class="outline-2">
-<h2 id="orgb9f2284">Where&rsquo;s Yayoi!?</h2>
-<div class="outline-text-2" id="text-orgb9f2284">
+<body id="outline-container-org0022eea" class="outline-2">
+<h2 id="org0022eea">Where&rsquo;s Yayoi!?</h2>
+<div class="outline-text-2" id="text-org0022eea">
 <p>
 Where&rsquo;s Yayoi is a fun little game a play with a small group of friends. Its basically hide-and-seek only with a few twists like trying to find me based on clues I give them or trying to find me based on pictures I send to them via Discord. There was even a story-driven one where they actually had to find one of my alts. I primarily do these because I don&rsquo;t really have much fun playing the game the &ldquo;normal&rdquo; way and my friends seem to enjoy it.
 </p>
 </div>
 
-<div id="outline-container-orga9ec134" class="outline-3">
-<h3 id="orga9ec134">The Vanilla Game/Where&rsquo;s Yayoi @ Nite</h3>
-<div class="outline-text-3" id="text-orga9ec134">
+<div id="outline-container-org37d826e" class="outline-3">
+<h3 id="org37d826e">The Vanilla Game/Where&rsquo;s Yayoi @ Nite</h3>
+<div class="outline-text-3" id="text-org37d826e">
 <p>
 Based on GeoGuesser-style games, players get a screenshot of where my character (Yayoi) is, usually through Discord, they use that screenshot to try and locate my character. The first to find her gets a point. Player with the most points at the end of a set number of rounds wins. Where&rsquo;s Yayoi @ Nite, is just this same game but played at night 😉.
 </p>
@@ -281,9 +280,9 @@ Based on GeoGuesser-style games, players get a screenshot of where my character 
 </div>
 </div>
 </div>
-<div id="outline-container-org909e9c1" class="outline-3">
-<h3 id="org909e9c1">Where&rsquo;s Yayoi: The Hunt</h3>
-<div class="outline-text-3" id="text-org909e9c1">
+<div id="outline-container-org5a0610d" class="outline-3">
+<h3 id="org5a0610d">Where&rsquo;s Yayoi: The Hunt</h3>
+<div class="outline-text-3" id="text-org5a0610d">
 <p>
 This is kind of like a scavenger hunt. I place a character near something, a unique feature on a map, or a boss, or whatever I can think of. I then give clues based off the thing my character is standing next to. Players than try to find my character and get a screenshot with their character next to her. First one to get that screenshot and return to start gets 300 points, second person gets, 200, and third person gets 100, anyone placing after that receives no points. Player with the most points at the end of a set number of rounds wins the game!
 </p>
@@ -304,9 +303,9 @@ This is kind of like a scavenger hunt. I place a character near something, a uni
 </div>
 </div>
 
-<div id="outline-container-orga9e5f72" class="outline-3">
-<h3 id="orga9e5f72">Find my Lost Baby!</h3>
-<div class="outline-text-3" id="text-orga9e5f72">
+<div id="outline-container-orgeff8a78" class="outline-3">
+<h3 id="orgeff8a78">Find my Lost Baby!</h3>
+<div class="outline-text-3" id="text-orgeff8a78">
 <p>
 This was a special even that I put on that gave a bit of a story to a Where&rsquo;s Yayoi event. If you don&rsquo;t know from the <a href="index.html">home page</a> already, I have a character named BabyYayo. Basically the story was that she was naughty and ran away and I was enlisting my friends to help find her. During the event BabyYayo went to various places and I would pretend she sent me a picture of clue as to where she was and passed that on to my friends who would try to find her. This was actually incredibly fun for me, and I think fun for my friends. Unlike other Where&rsquo;s Yayoi games there weren&rsquo;t any points or winners, just a lot of fun and story!
 </p>
