--- a/guides/lvling/gods.html
+++ b/guides/lvling/gods.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-05 Sat 15:54 -->
+<!-- 2022-03-16 Wed 18:21 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your God-like Adventurers</title>
@@ -202,7 +202,6 @@ Footer" />
 </head>
 <body>
 <div id="content" class="page">
-
 <nav class="navbar navbar-expand-lg navbar-yayoi bg-yayoi">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
@@ -220,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/event_WWD_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/announcement-general_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">World Wildlife Day!</h1>
-          <p class="text-center">Keep an eye on the Leipoons and win great prizes!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/world_wildlife_day-415" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">St. Patrick's Day must be celebrated!</h1>
+          <p class="text-center">...with a server boost!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/server-boost-754" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
@@ -271,17 +270,17 @@ There are new reps for you to complete as well. Well a couple anyway.
 </ul>
 </div>
 </div>
-<div id="outline-container-org4e1e90d" class="outline-3">
-<h3 id="org4e1e90d">Questing</h3>
-<div class="outline-text-3" id="text-org4e1e90d">
+<div id="outline-container-orgeb1a654" class="outline-3">
+<h3 id="orgeb1a654">Questing</h3>
+<div class="outline-text-3" id="text-orgeb1a654">
 <p>
 The <a href="http://fiesta-wiki.com/quests/13">fiesta wiki</a> offers a few options for quests for this level range. It has been recommended to relay on dailies and reps until at least 139. This will allow you to save your quests for when normal quests are suuuper in-effective, and hopefully make that last level just a little faster.
 </p>
 </div>
 </div>
-<div id="outline-container-org459ea5b" class="outline-3">
-<h3 id="org459ea5b">Suggestions</h3>
-<div class="outline-text-3" id="text-org459ea5b">
+<div id="outline-container-org9aa322d" class="outline-3">
+<h3 id="org9aa322d">Suggestions</h3>
+<div class="outline-text-3" id="text-org9aa322d">
 <p>
 This guide is currently rather incomplete 😅. This is why I have <a href="http://forums.onigirionegai.info/viewforum.php?f=3">forums</a>! Please submit any other suggestions you have or ways you can think to expand this guide. I will also be expanding it has I try these suggestions. As I said, my max level is 133, but I&rsquo;m slowly making progress and I&rsquo;m working with someone who is already above level 135 so it won&rsquo;t be too long. Hopefully this guide still helps in the meantime.
 </p>
