--- a/adventures/index.html
+++ b/adventures/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-05 Sat 21:41 -->
+<!-- 2022-03-16 Wed 18:21 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Adventures</title>
@@ -202,7 +202,6 @@ Footer" />
 </head>
 <body>
 <div id="content" class="page">
-
 <nav class="navbar navbar-expand-lg navbar-yayoi bg-yayoi">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
@@ -220,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/event_WWD_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/announcement-general_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">World Wildlife Day!</h1>
-          <p class="text-center">Keep an eye on the Leipoons and win great prizes!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/world_wildlife_day-415" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">St. Patrick's Day must be celebrated!</h1>
+          <p class="text-center">...with a server boost!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/server-boost-754" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
@@ -236,16 +235,16 @@ Footer" />
     <div class="row">
       <div class="col-lg-12 mb-4 mt-2 text-justify">
 
-<body id="outline-container-org6bcb1e3" class="outline-2">
-<h2 id="org6bcb1e3">Adventures</h2>
-<div class="outline-text-2" id="text-org6bcb1e3">
+<body id="outline-container-orgef42e7f" class="outline-2">
+<h2 id="orgef42e7f">Adventures</h2>
+<div class="outline-text-2" id="text-orgef42e7f">
 <p>
 I decided it would be fun to showcase a few of my Adventures both from Fiesta and from Final Fantasy XIV. I&rsquo;m still working on getting things together for Final Fantasy XIV, but, in the meantime, enjoy my adventures through Isya in Fiesta.
 </p>
 </div>
-<div id="outline-container-org144641a" class="outline-3">
-<h3 id="org144641a">Fiesta Online NA</h3>
-<div class="outline-text-3" id="text-org144641a">
+<div id="outline-container-orgf9a03ec" class="outline-3">
+<h3 id="orgf9a03ec">Fiesta Online NA</h3>
+<div class="outline-text-3" id="text-orgf9a03ec">
 <ul class="org-ul">
 <li><a href="misc.html">Miscellaneous Adventures and Photo-shoots</a></li>
 <li><a href="where.html">Where&rsquo;s Yayoi!?</a></li>
