--- a/guides/index.html
+++ b/guides/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-05 Sat 15:54 -->
+<!-- 2022-03-16 Wed 18:21 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides</title>
@@ -202,7 +202,6 @@ Footer" />
 </head>
 <body>
 <div id="content" class="page">
-
 <nav class="navbar navbar-expand-lg navbar-yayoi bg-yayoi">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
@@ -220,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/event_WWD_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/announcement-general_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">World Wildlife Day!</h1>
-          <p class="text-center">Keep an eye on the Leipoons and win great prizes!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/world_wildlife_day-415" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">St. Patrick's Day must be celebrated!</h1>
+          <p class="text-center">...with a server boost!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/server-boost-754" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
@@ -236,9 +235,9 @@ Footer" />
     <div class="row">
       <div class="col-lg-12 mb-4 mt-2 text-justify">
 
-<body id="outline-container-org620c9bd" class="outline-2">
-<h2 id="org620c9bd">Guides</h2>
-<div class="outline-text-2" id="text-org620c9bd">
+<body id="outline-container-org94fd97c" class="outline-2">
+<h2 id="org94fd97c">Guides</h2>
+<div class="outline-text-2" id="text-org94fd97c">
 <p>
 Welcome to my guides to Fiesta Online. I mostly just wrote these for me and my friends, but hopefully you find them useful 😅. I&rsquo;m going to be trying to update them as I learn and discover new things about the game from playing it myself or from friends, particularly the <a href="builds.html">build guide</a>. So, check back, and if you have any suggetions let me know. I hope to have an e-mail up soon 😜
 </p>
