Further guide updates
Needed to add some information regarding daily quests being available
after 135 now.

--- a/guides/dailes.html
+++ b/guides/dailes.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-16 Wed 18:24 -->
+<!-- 2022-03-16 Wed 19:04 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Daily Quest Quick Guide</title>
@@ -341,22 +341,20 @@ For more information on Gold Nine and Fragment of Bijou see my
 <h3 id="daily-quests-130">Daily Quests (130+)</h3>
 <div class="outline-text-3" id="text-daily-quests-130">
 <p>
-I have not reached this point, so I don&rsquo;t know the particulars on how
-these work yet. I&rsquo;ll update this guide when I get to 130. Until then,
-I&rsquo;ll just list the quest, and any prequests you need to unlock them. Don&rsquo;t forget to visit the <a href="http://fiesta-wiki.com/quests/13">Fiesta Wiki</a> if you need help following these quest trains or other unlocking steps.
+I have just reached this point, so I don&rsquo;t know the all particulars on how these work yet. For now I&rsquo;ll just list the quest, and any prequests you need to unlock them. Don&rsquo;t forget to visit the <a href="http://fiesta-wiki.com/quests/13">Fiesta Wiki</a> if you need help following these quest trains or other unlocking steps. It should also be noted that much of this was written <i>before</i> the 140 cap raise and it appears this quests may be available up until 140, I&rsquo;ll update if I find one that isn&rsquo;t.
 </p>
 
 <ul class="org-ul">
-<li>Ursula&rsquo;s Mad Garden (lvl 130-135)</li>
-<li>Enter the Dark Portal (130-135, prequest &ldquo;Unusual Behavior&rdquo;, both this and the prequest appear to require a special item)</li>
-<li>Mysterious Rock (130-125, You need a mysterious rock, which apparently
+<li>Ursula&rsquo;s Mad Garden (lvl 130-140)</li>
+<li>Enter the Dark Portal (130-140, prequest &ldquo;Unusual Behavior&rdquo;, both this and the prequest appear to require a special item)</li>
+<li>Mysterious Rock (130-140, You need a mysterious rock, which apparently
 drop in Twilight Void)</li>
 <li>Precious Ore (131-132, this appears to also require a special item)</li>
 <li>The Temple Guard (132-133)</li>
-<li>The Land of the Golden Dragon (132-135)</li>
+<li>The Land of the Golden Dragon (132-140)</li>
 <li>Toxic Monsters (132)</li>
 <li>Corrupted Adventurers (133 (also known as ghosts), prequests: 130 &ldquo;To the Ominous Valley&rdquo;&gt;130 &ldquo;Ming&rsquo;s Disaster 1&rdquo;&gt;130 &ldquo;Ming&rsquo;s Disaster 2&rdquo;&gt;131 &ldquo;Ming&rsquo;s Disaster 4&rdquo;&gt;133 &ldquo;Ming&rsquo;s Disaster 5&rdquo;, this is <i>best</i> done with a party as these <b>ghosts</b> are hard!)</li>
-<li>Most Apish Matter (134-135)</li>
+<li>Most Apish Matter (134-140)</li>
 <li>Omamori Tailsmans (prequests: 130 &ldquo;A Letter to the Civilized
 Word!&rdquo;&gt;131 &ldquo;Wild Kjnari&rdquo;&gt; 132 &ldquo;Wil Tentaculata&rdquo;&gt;133 &ldquo;Toxic Kjarni&rdquo;&gt;134
 &ldquo;Crystallize Toxin&rdquo;)</li>
