Added a new note and fixed some typos!

--- a/guides/lvling/adventurer.html
+++ b/guides/lvling/adventurer.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-21 Mon 13:32 -->
+<!-- 2022-03-22 Tue 21:38 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Bone-fide Adventurer</title>
@@ -241,7 +241,7 @@ Footer" />
 <p>
 After following <a href="fledgling.html">my guide</a> thus far
 you&rsquo;ll notice that trying to do things solo from this point on is really
-hard if not impossible unless you pray really hard to the Gamingo Gods
+hard if not impossible unless you pray really hard to the Gamigo Gods
 and give them plenty of offerings (by purchasing SC) 😅 So, hopefully,
 you&rsquo;ve gotten yourself into a good guild <i>and</i> have managed to collect a
 lot of good friends. Trust me, this really helps 😜 Regardless, there are
