--- a/guides/lvling/fledgling.html
+++ b/guides/lvling/fledgling.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-21 Mon 13:17 -->
+<!-- 2022-03-22 Tue 21:40 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Fledgling Adventurer</title>
@@ -256,7 +256,7 @@ on how things can be done at this stage too. For this stage I&rsquo;m going to
 give you a few options for some of the levels. If you have the friends
 and money they&rsquo;ll help you level really quickly, if you don&rsquo;t than you
 can still solo, or work with a group of close friends your level, and
-stll level, but it&rsquo;ll be slower.
+still level, but it&rsquo;ll be slower.
 </p>
 </div>
 
@@ -268,7 +268,7 @@ stll level, but it&rsquo;ll be slower.
 a higher level friend or a DT runner and a few droppers run through
 DT with you. Make sure you inventory is nearly empty and just fill it
 with these armor pieces. Once full, leave the dungeon and spam turn
-ins. Rince and repeat until your level 90. Don&rsquo;t forget to get the DT
+ins. Rinse and repeat until your level 90. Don&rsquo;t forget to get the DT
 Key and quests.</li>
 <li>Alternatively, you can just do all the level 7x quests. There are a
 few somewhat boring reps mixed in there to help you get to 90.</li>
@@ -416,11 +416,15 @@ Junks rep. This is also buried under a loooong list of prequests, so
 I&rsquo;ll give you those too. &ldquo;Smart Yeti is preparing for an
 Exam&rdquo;&gt;&ldquo;Something urgent came up to Hilda&rdquo;&gt;&ldquo;Sick Akisha&rdquo;&gt;&ldquo;North Witch&rsquo;s
 dark power&rdquo;&gt;&ldquo;Pagel&rsquo;s voice 1&rdquo;&gt;&ldquo;Pagel&rsquo;s voice 2&rdquo;&gt;&ldquo;Someone can help us..
-Right?&rdquo;&gt;&ldquo;Yeti inivading Arkroute&rdquo;&gt;&ldquo;A strong Alliance&rdquo;&gt;&ldquo;To prosper Bera
+Right?&rdquo;&gt;&ldquo;Yeti invading Arkroute&rdquo;&gt;&ldquo;A strong Alliance&rdquo;&gt;&ldquo;To prosper Bera
 Village&rdquo;&gt;&ldquo;The Adventurers are not arriving&rdquo;&gt;&ldquo;The scariest monster&rdquo;&gt;&ldquo;A
 story of Valiere and Hilda 1&rdquo;&gt;&ldquo;A story of Vailere and Hilda 2&rdquo;&gt;&ldquo;A story
 of Valiere and Hilda 3&rdquo;. After <i>aaall</i> these quests, you&rsquo;ll finally get
 <i>&ldquo;Selling Junks&rdquo;</i>
+</p>
+
+<p>
+I&rsquo;ve learned something just recently. There are a quite a few quests that you can do during this level, including a ton of repeatables. Junks is, by far, the fastest way, but it can be dangerous because of all the Astan&rsquo;s nearby. For this reason I recommend having a good party with someone tanky to pull and a good killer that could, if needed, one-shot the Astans if they get close. Bonus, a party should be able to tell you exactly where to stand, sit on your mount, or rest during the rep to minimize your likelihood of dying, however, if you don&rsquo;t have a lot of friends, there are easier, but slower reps. As I mentioned, a <b>TON</b> of them. Just don&rsquo;t get discouraged by how slow you gain exp. Also, if your in a guild that likes to do Siren&rsquo;s Castle raids and has a few good runners, ask if you can tag along for quests. This will be a good way to gain looots of exp at once, but be sure they are okay with you joining and it would probably good to spend some money on scrolls, tevas and charms, don&rsquo;t forget to grab all the dungeon quests, they should have a sword icon!
 </p>
 </div>
 </div>
