Another weekly update!

--- a/guides/dailes.html
+++ b/guides/dailes.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-22 Tue 21:40 -->
+<!-- 2022-03-24 Thu 19:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Daily Quest Quick Guide</title>
@@ -219,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/event_forestday_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/cash_general4_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">Celebrate #InternationalDayofForests !</h1>
-          <p class="text-center">Show us your favorite Forest and win goodies!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/international-forest-day-437" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">The Glorious Return of the $99.99 Token Pack!</h1>
+          <p class="text-center">Get your vault filled with Fiesta Tokens!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/fiesta-token-pack-9999" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
