--- a/guides/lvling/fledgling.html
+++ b/guides/lvling/fledgling.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-22 Tue 21:40 -->
+<!-- 2022-03-24 Thu 19:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Fledgling Adventurer</title>
@@ -219,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/event_forestday_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/cash_general4_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">Celebrate #InternationalDayofForests !</h1>
-          <p class="text-center">Show us your favorite Forest and win goodies!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/international-forest-day-437" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">The Glorious Return of the $99.99 Token Pack!</h1>
+          <p class="text-center">Get your vault filled with Fiesta Tokens!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/fiesta-token-pack-9999" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
@@ -284,6 +284,8 @@ for some reason:
 </p>
 
 <ol class="org-ol">
+<li>Level 81-86 - Miner Mole Rep - &ldquo;I Despise Moles&rdquo;</li>
+<li>Level 82-87 - Another Mole Rep - &ldquo;It&rsquo;s Them Again (Repeatable Quest)&rdquo;</li>
 <li>Level 84-88 - Kidmon Rep - &ldquo;Hans in Love&rdquo;</li>
 <li>Level 85-88 - Toy Spade Rep - &ldquo;Kidmon The Menance&rdquo;</li>
 <li>Level 86-89 - Jewel Tree Rep - &ldquo;Tree of Jewels&rdquo;</li>
@@ -412,7 +414,7 @@ this boosts your exp too.
 <h4 id="level-118-121">Level 118-121</h4>
 <div class="outline-text-4" id="text-level-118-121">
 <p>
-Junks rep. This is also buried under a loooong list of prequests, so
+Junks rep. This is also buried under a loooong list of prequests (but it is worth it! these quests will give you a lot of exp and the rep gives 2-3% per turn it 😲), so
 I&rsquo;ll give you those too. &ldquo;Smart Yeti is preparing for an
 Exam&rdquo;&gt;&ldquo;Something urgent came up to Hilda&rdquo;&gt;&ldquo;Sick Akisha&rdquo;&gt;&ldquo;North Witch&rsquo;s
 dark power&rdquo;&gt;&ldquo;Pagel&rsquo;s voice 1&rdquo;&gt;&ldquo;Pagel&rsquo;s voice 2&rdquo;&gt;&ldquo;Someone can help us..
