Updated the status of Fiesta Wiki
Added an update that the Fiesta Wiki appears to be back!

--- a/fiesta-wiki.html
+++ b/fiesta-wiki.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-04 Sat 19:49 -->
+<!-- 2022-06-09 Thu 21:26 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Fiesta Wiki is Dead</title>
@@ -223,8 +223,8 @@ Footer" />
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">Fiesta Wiki Died</h1>
-          <p class="text-center">The Fiesta Wiki is now a ghost 😭</p>
+          <h1 class="text-center">Fiesta Wiki Died, or not!</h1>
+          <p class="text-center">Someone may have cast "Revive" on the Fiesta Wiki!</p>
           <p class="text-center"><a class="btn btn-primary btn-lg" href="https://onigirionegai.info/~yayoi/fiesta-wiki.html" target="new" role="button">Learn more</a></p>
         </div>
       </div>
@@ -239,7 +239,7 @@ Footer" />
 <h2 id="org8618c20">The Fiesta Wiki is Gone 😭</h2>
 <div class="outline-text-2" id="text-org8618c20">
 <p>
-As of the 1 Jun 2022 the Fiesta Wiki, which is a site we linked to a lot so you can get more detailed information on quests and other aspects of Fiesta Online, is gone. I don&rsquo;t have hard evidence or firsthand information on exactly what has happened, but according to some of my guildies the developer is leaving Fiesta and no longer wants to support the project. This wiki had a <b>LOT</b> of very useful information about alchemy, quests, items, and more in the game and it will be sad to lose it all. So far this is still just a distant possibility. Though the wiki is currently offline (only a 404 error in its place), we believe the developer is looking at solutions to get this back.
+As of the 1 Jun 2022 the <a href="http://fiesta-wiki.com/">Fiesta Wiki</a>, which is a site we linked to a lot so you can get more detailed information on quests and other aspects of Fiesta Online, is gone. I don&rsquo;t have hard evidence or firsthand information on exactly what has happened, but according to some of my guildies the developer is leaving Fiesta and no longer wants to support the project. This wiki had a <b>LOT</b> of very useful information about alchemy, quests, items, and more in the game and it will be sad to lose it all. So far this is still just a distant possibility. Though the wiki is currently offline (only a 404 error in its place), we believe the developer is looking at solutions to get this back.
 </p>
 
 <p>
@@ -248,6 +248,14 @@ I have also been informed that Google does have most, if not all, of the site ca
 
 <p>
 Watch this page for future details. I&rsquo;ll also put up a forum post or something, but my forums are basically dead right now, so just look at this page probably 😅
+</p>
+</div>
+
+<div id="outline-container-org7c1d755" class="outline-3">
+<h3 id="org7c1d755">Update: 9 Jun 2022</h3>
+<div class="outline-text-3" id="text-org7c1d755">
+<p>
+As of the 9 Jun 2022 the <a href="http://fiesta-wiki.com/">wiki</a> is back up. In my brief testing the site is working, but running very slowly. There is no mention of the downtime in the site&rsquo;s news section so I&rsquo;m not sure if the rumors my guildies mentioned are true or if the site is fully restored or not. I&rsquo;ll continue to monitor the <a href="http://fiesta-wiki.com/">wiki</a> and keep you informed, however, the links should not work, just be patient!
 </p>
 
   </div>
@@ -262,6 +270,7 @@ Watch this page for future details. I&rsquo;ll also put up a forum post or somet
     </div>
   </div>
 </footer>
+</div>
 </div>
 </body>
 </div>
