--- a/guides/lvling/gods.html
+++ b/guides/lvling/gods.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-04 Sat 19:46 -->
+<!-- 2022-06-09 Thu 21:21 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your God-like Adventurers</title>
@@ -223,8 +223,8 @@ Footer" />
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">Fiesta Wiki Died</h1>
-          <p class="text-center">The Fiesta Wiki is now a ghost 😭</p>
+          <h1 class="text-center">Fiesta Wiki Died, or not!</h1>
+          <p class="text-center">Someone may have cast "Revive" on the Fiesta Wiki!</p>
           <p class="text-center"><a class="btn btn-primary btn-lg" href="https://onigirionegai.info/~yayoi/fiesta-wiki.html" target="new" role="button">Learn more</a></p>
         </div>
       </div>
