Finally fixed frame border ^^;

--- a/frames.html
+++ b/frames.html
@@ -3,9 +3,9 @@
   <head>
     <title>Yaya's World</title>
   </head>
-  <frameset cols="250, *">
-    <frame name="sidebar" src="./sidebar.html" frameborder=0 framespacing=0 border=0 noresize="noresize" />
-    <frame name="window" src="./index.html" frameborder=0 framespacing=0 border=0 noresize="noresize" />
+  <frameset cols="250, *" border="0">
+    <frame name="sidebar" src="./sidebar.html" noresize="noresize" />
+    <frame name="window" src="./index.html" noresize="noresize" />
     <noframes>
       <body><p>Your browser doesn't support frames! Please <a href="./index.html">deactivate</a> the sidebar.</p></body>
     </noframes>
